# async-unzip

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  run_tests.sh  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
async_unzip/: __init__.py  unzipper.py
tests/: test_hardening.py  test_limits.py  test_unzipper.py
