[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-unzip"
description = "Async unzipping to prevent asyncio timeout errors and decrease the memory usage for bigger zip files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dmytro Nikolayev", email = "dnikolayev@gmail.com" }]
keywords = ["async", "unzip"]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/ueni-ltd/async-unzip"

[project.optional-dependencies]
dev = [
    "tox",
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "pylint",
    "mypy",
]
isal = ["isal"]
zlib-ng = ["zlib-ng"]
speedups = ["isal", "zlib-ng", "uvloop"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
# __version__ must stay a plain string literal at the top of __init__.py,
# before its imports, so setuptools resolves it statically (no import).
version = { attr = "async_unzip.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
async_unzip = ["py.typed"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["async_unzip"]
combine_as_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    # in_memory=True is deprecated; its dedicated test asserts the warning,
    # the rest of the in_memory coverage should stay quiet.
    "ignore:unzip_stream\\(in_memory=True\\) is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "duplicate-code",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-function-args",
    "too-many-locals",
    "too-many-positional-arguments",
    "unspecified-encoding",
    "unused-argument",
    "unused-import",
    "use-implicit-booleaness-not-comparison",
]

[tool.pylint.design]
max-args = 10
max-locals = 25
max-positional-arguments = 10
